# UserSystem

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  auxiliary.sh  brew.bzl  build.sh  docker-compose.yml  gen.sh  run_server.sh  usersystem.proto
certficate/: cert.pem  key.pem
client-android/: settings.gradle
client-android/app/: build.gradle
client-android/app/src/androidTest/java/com/wanghong/grpc/: ExampleInstrumentedTest.kt
client-android/app/src/main/: AndroidManifest.xml
client-android/app/src/main/java/com/wanghong/grpc/: AppConstants.kt  BaseActivity.kt  GRPCApplication.kt  LoginActivity.kt  MainActivity.kt  RegisterActivity.kt
client-android/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_register.xml  progress_bar.xml
client-android/app/src/main/res/values/: colors.xml  strings.xml
client-android/app/src/test/java/com/wanghong/grpc/: ExampleUnitTest.kt
client-android/gradle/wrapper/: gradle-wrapper.properties
client-android/usersystem/: CMakeLists.txt  build.gradle  proguard-rules.pro
client-android/usersystem/src/androidTest/java/com/wanghong/grpc/usersystem/: ExampleInstrumentedTest.kt
client-android/usersystem/src/main/: AndroidManifest.xml
client-android/usersystem/src/main/cpp/: usersystem_client.cpp  usersystem_client.h  usersystem_client_proxy.cpp  usersystem_client_proxy.h
client-android/usersystem/src/main/java/com/wanghong/grpc/usersystem/: UserSystemNative.kt  UserSystemService.kt
client-android/usersystem/src/main/java/com/wanghong/grpc/usersystem/proto/: CheckLoginRequest.java  CheckLoginRequestOrBuilder.java  CheckLoginResponse.java  CheckLoginResponseOrBuilder.java  CommonResponse.java  CommonResponseOrBuilder.java  Geo.java  GeoOrBuilder.java  LoginRequest.java  LoginRequestOrBuilder.java  LoginResponse.java  LoginResponseOrBuilder.java  LogoutRequest.java  LogoutRequestOrBuilder.java  Platform.java  RegisterRequest.java  RegisterRequestOrBuilder.java  RegisterResponse.java  RegisterResponseOrBuilder.java  ResponseCode.java  UserLoginHistoryModel.java  UserLoginHistoryModelOrBuilder.java  UserModel.java  UserModelOrBuilder.java  UserSystemProto.java
client-android/usersystem/src/main/res/values/: strings.xml
client-android/usersystem/src/test/java/com/wanghong/grpc/usersystem/: ExampleUnitTest.kt
client-common/: UserSystemClient.cpp  UserSystemClient.h
client-native/: CMakeLists.txt  TestingLogin.cpp  TestingRegister.cpp  client-native.cpp
common/: BUILD  common.cmake  usersystem.grpc.pb.cc  usersystem.grpc.pb.h  usersystem.pb.cc  usersystem.pb.h
docs/: usersystem.xmind
server/: AbstractDbConnector.h  BUILD  CMakeLists.txt  MySQLDbConnector.cpp  MySQLDbConnector.h  UserSystemImpl.cpp  UserSystemImpl.h  Utils.h  server.cpp
